# Python-projekt

./: .gitignore  README.md  __init__.py  analysis.py  clean_merge.py  cli.py  config  data_io.py  demo.ipynb  inconsistencies.py  index  logging_utils.py  profiling.md  profiling_example.txt  pyproject.toml  report.py  setup.cfg  test_analysis.py  test_data_io.py
